Provukao sve fajlove kroz lint, ispravio par stvari.

--- a/src/animacija2.html
+++ b/src/animacija2.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Palica
 Kontrolisanje palice
 Ciglice
@@ -42,39 +42,51 @@ Podaci:
 - highScores
 - lives
 - bonuses
-- 
-- 
-- 
+-
+-
+-
 
 
  -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        *{
-            box-sizing: border-box;
-        }
 
-        .brick{
-            width:100px;
-            height:25px;
-            background: #777;
-            outline: solid #fff 2px;
-        }
-        .brick-0{background: #fff;}
-        .brick-1{background: red;}
-        .brick-2{background:gold;}
-    </style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    .brick {
+      width: 100px;
+      height: 25px;
+      background: #777;
+      outline: solid #fff 2px;
+    }
+
+    .brick-0 {
+      background: #fff;
+    }
+
+    .brick-1 {
+      background: red;
+    }
+
+    .brick-2 {
+      background: gold;
+    }
+  </style>
 </head>
+
 <body>
 
-    <button type="button" id="startGame">Start game</button>
-    <div id="game"></div>
-    <div id="scores"></div>
-    <script src="animacija2.js"></script>
+  <button type="button" id="startGame">Start game</button>
+  <div id="game"></div>
+  <div id="scores"></div>
+  <script src="animacija2.js"></script>
 </body>
+
 </html>
