added lives,score and game over

--- a/src/animacija2.html
+++ b/src/animacija2.html
@@ -75,6 +75,7 @@ Podaci:
     <button type="button" id="startGame">Start game</button>
     <div id="game"></div>
     <div id="scores"></div>
+    <div id="lives"></div>
     <script src="animacija2.js"></script>
 </body>
 </html>
