added lives,score and game over

--- a/src/animacija2.html
+++ b/src/animacija2.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Palica
 Kontrolisanje palice
 Ciglice
@@ -42,9 +42,9 @@ Podaci:
 - highScores
 - lives
 - bonuses
-- 
-- 
-- 
+-
+-
+-
 
 
  -->
@@ -68,13 +68,18 @@ Podaci:
         .brick-0{background: #fff;}
         .brick-1{background: red;}
         .brick-2{background:gold;}
+
     </style>
+    <script>
+      let a=5
+    </script>
 </head>
 <body>
 
     <button type="button" id="startGame">Start game</button>
     <div id="game"></div>
     <div id="scores"></div>
+    <div id="lives"></div>
     <script src="animacija2.js"></script>
 </body>
 </html>
