--- a/src/animacija2.html
+++ b/src/animacija2.html
@@ -19,7 +19,6 @@ Bonusi
     - brža loptica
     - sporija loptica
     - život
-
 Funkcije:
 - levelUp
 - batMove
@@ -32,7 +31,6 @@ Funkcije:
     - changeSpeed
     - shoot
     - strongerBall
-
 Podaci:
 - levels
 - bat
@@ -45,8 +43,6 @@ Podaci:
 -
 -
 -
-
-
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -86,6 +82,7 @@ Podaci:
   <button type="button" id="startGame">Start game</button>
   <div id="game"></div>
   <div id="scores"></div>
+  <div id="lives"></div>
   <script src="animacija2.js"></script>
 </body>
 
